<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".horseGame.HorseGame">

    <LinearLayout
        android:id="@+id/lyPremium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPremium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/contrast_data"
            android:fontFamily="@font/amaranthregular"
            android:paddingVertical="8dp"
            android:text="@string/premium"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/svGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lyPremium"
        android:paddingBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/amaranthbold"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tvLevelTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_title_top"
                android:fontFamily="@font/amaranthbold"
                android:paddingTop="10dp"
                android:text="@string/level"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvLevelNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_title_bottom"
                android:fontFamily="@font/amaranthbold"
                android:paddingBottom="10dp"
                android:text="@string/level"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvMovesTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_data_top"
                        android:fontFamily="@font/amaranthregular"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/moves"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvMovesData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_data_bottom"
                        android:fontFamily="@font/amaranthregular"
                        android:paddingBottom="10dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTimeTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_data_top"
                        android:fontFamily="@font/amaranthregular"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvTimeData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_data_bottom"
                        android:fontFamily="@font/amaranthregular"
                        android:paddingBottom="10dp"
                        android:text="00:00"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLiveTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_data_top_contrast"
                        android:fontFamily="@font/amaranthregular"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/lives"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvLiveData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_data_bottom_contrast"
                        android:fontFamily="@font/amaranthregular"
                        android:paddingBottom="10dp"
                        android:text="0"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvOptionsTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_data_top"
                        android:fontFamily="@font/amaranthregular"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/options"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <View
                        android:id="@+id/vnNewBonus"
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:background="@color/contrast_data"
                        android:translationY="-8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_data_bottom"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:translationY="-8dp">

                        <TextView
                            android:id="@+id/tvOptionesData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_data_bottom"
                            android:fontFamily="@font/amaranthregular"
                            android:paddingBottom="10dp"
                            android:text="0"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/tvBonusData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/amaranthregular"
                            android:paddingBottom="10dp"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/lyAdsBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

    </LinearLayout>

</RelativeLayout>